--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,15 @@
+body {
+    background: lightcyan;
+}
+
+
 #images {
     display:flex;
     flex-direction: row; 
     width: 100%; 
     justify-content: center; 
+}
+
+#gameDisplay{
+    
 }
