--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,8 +8,13 @@ body {
     flex-direction: row; 
     width: 100%; 
     justify-content: center; 
+    padding-top: 200px; 
 }
 
 #gameDisplay{
-    
+    display: flex; 
+    justify-content: center; 
+    padding-top: 100px; 
+    font-size: 50px; 
+    color: blue; 
 }
